<resources>
  <string name="app_name">Info Center</string>
  <string name="title_activity_main">Info Center</string>
  <string name="title_news">News</string>
  <string name="title_report">Report News</string>
  <string name="title_contact">Contacts</string>
  <string name="title_add_contact">Add New Contact</string>

  <string name="str_latest_news">News</string>
  <string name="str_alert_level">Alert Level</string>
  <string name="str_report">Report</string>
  <string name="str_donation">Contacts</string>

  <string name="hint_title">Title</string>
  <string name="hint_content">Content</string>
  <string name="hint_fb_url">Facebook URL</string>
  <string name="hint_contact_numbers">Contact Phone Numbers</string>
  <string name="hint_detail">Detail</string>
  <string name="hint_location">Donation Location</string>

  <string name="btn_submit">Submit</string>
  <string name="title_activity_main2">Main2Activity</string>

  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>
  <string name="no_internet">No internet connection!</string>

  <string name="water_level_condtion_normal">ပုံမွန္</string>
  <string name="water_level_condtion_warning">စိုးရိမ္ေရမွတ္</string>
  <string name="water_level_condtion_important">အေျခအေနဆိုး(Floading Point)</string>
  <string name="river_level">ျမစ္  အေျခအေန</string>
  <string name="dam_level">ဆည္ အေျခအေန</string>
  <string name="township">ျမိဳ့နယ္</string>
  <string name="title_activity_alert">Alert Level</string>

  <string name="location_auth">%1$s:%2$s</string>
</resources>
