<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <LinearLayout
      android:layout_marginLeft="@dimen/activity_horizontal_margin"
      android:layout_marginRight="@dimen/activity_horizontal_margin"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >

    <EditText
        android:id="@+id/edt_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_title"
        android:minLines="3"
        />

    <EditText
        android:id="@+id/edt_fb_url"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_fb_url"
        android:inputType="textUri"
        />

    <EditText
        android:id="@+id/edt_contact_number"
        android:inputType="number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_contact_numbers"
        android:minLines="3"
        />

    <EditText
        android:id="@+id/edt_detail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_detail"
        android:minLines="5"
        />

    <EditText
        android:id="@+id/edt_donation_location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_location"
        android:minLines="5"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:onClick="onSubmit"
        android:text="@string/btn_submit"
        />

  </LinearLayout>
</ScrollView>