<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RadioGroup
        android:padding="@dimen/card_insets"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <RadioButton
            android:id="@+id/rbn_dam_normal"
            android:textSize="@dimen/radio_button"
            android:text="@string/water_level_condtion_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <RadioButton
            android:id="@+id/rbn_dam_important"
            android:textSize="@dimen/radio_button"
            android:text="@string/water_level_condtion_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <RadioButton
            android:id="@+id/rbn_dam_fload"
            android:textSize="@dimen/radio_button"
            android:text="@string/water_level_condtion_important"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </RadioGroup>
</LinearLayout>