<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="@dimen/card_insets">

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
          android:id="@+id/resultView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:src="@drawable/camera" />

        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_alignParentStart="true"
          android:layout_centerVertical="true"
          android:gravity="center"
          android:text="Take the photo"
          android:textAlignment="center"
          android:textColor="@android:color/white"
          android:textSize="20sp"
          android:textStyle="bold" />
      </RelativeLayout>

      <Spinner
          android:id="@+id/spinner_location"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          />

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/card_insets">


        <EditText
          android:id="@+id/edt_title"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_title"
          android:minLines="3" />

        <EditText
          android:id="@+id/edt_content"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_content"
          android:minLines="5" />

        <View
          android:layout_width="fill_parent"
          android:layout_height="1dp"
          android:layout_marginBottom="@dimen/card_insets"
          android:layout_marginTop="@dimen/card_insets"
          android:background="@color/divider_color" />

        <TextView
          android:id="@+id/river_condition"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/river_level"
          android:textStyle="bold" />

        <include layout="@layout/water_level" />

        <View
          android:layout_width="fill_parent"
          android:layout_height="1dp"
          android:layout_marginBottom="@dimen/card_insets"
          android:layout_marginTop="@dimen/card_insets"
          android:background="@color/divider_color" />

        <TextView
          android:id="@+id/dam_condition"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/dam_level"
          android:textStyle="bold" />

        <include layout="@layout/dam_waterlevel" />

        <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="right"
          android:onClick="onSubmit"
          android:text="@string/btn_submit" />

      </LinearLayout>
    </LinearLayout>
  </ScrollView>
</android.support.design.widget.CoordinatorLayout>